# SketchDetection

./: .gitignore  README.md  conda.yaml  gui.py  pyproject.toml  train.py
configs/: sample-config.json
sketchdetection/: __init__.py  datasets.py  models.py
